--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "homepage": "https://github.com/aprather51/sass_complier_watcher#readme",
   "devDependencies": {
-    "node-sass": "^4.5.3",
-    "nodemon": "^1.11.0"
+    "node-sass": "^4.5.3"
   }
 }
