commit update change

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aprather51/sass_complier_watcher.git"
+    "url": "git+aprather51+https://github.com/aprather51/sass_complier_watcher.git"
   },
   "keywords": [
     "sass",
